# goblins-os

./: .dockerignore  .gitignore  AGENTS.md  CLA.md  CONTRIBUTING.md  Cargo.toml  GO-LIVE.md  GOAL.md  LICENSE.md  NOTICE  README.md  ROADMAP.md  SHIP.md  TRADEMARKS.md
.github/: copilot-instructions.md
.github/workflows/: aarch64-local-display-attestation.yml  aarch64-verification-iso.yml  branding-tool-image.yml  build.yml  candidate-artifacts.yml  hardware-gate-capture.yml  release.yml
apps/site/: .gitignore  .vercelignore  eslint.config.mjs  package.json  tsconfig.json
apps/site/public/: llms.txt  robots.txt
crates/goblins-os-ai/: Cargo.toml
crates/goblins-os-ai/src/: lib.rs
crates/goblins-os-color-picker/: Cargo.toml
crates/goblins-os-color-picker/src/: main.rs
crates/goblins-os-control-center/: Cargo.toml
crates/goblins-os-control-center/src/: main.rs
crates/goblins-os-core/: Cargo.toml
crates/goblins-os-core-client/: Cargo.toml
crates/goblins-os-core-client/src/: lib.rs
crates/goblins-os-core-client/tests/: native_capability.rs
crates/goblins-os-core/src/: accelerators.rs  accessibility.rs  ai.rs  app_builder.rs  app_permissions.rs  appearance.rs  audio.rs  auth.rs  bluetooth.rs  boot_lock.rs  bounded.rs  codex.rs  control_plane.rs  credentials.rs  displays.rs  encryption.rs  fingerprint.rs  firewall.rs  focus.rs  hardware.rs  hotspot.rs  http_error.rs  input.rs  install_targets.rs  installer.rs  keychain.rs  live_captions.rs  main.rs  migration.rs  model_manager.rs  network.rs  notifications.rs  ocr.rs  openai_key.rs  policy.rs  preview.rs  privacy.rs  readiness.rs  resident.rs  service_catalog.rs  (+16 more)
crates/goblins-os-design/: Cargo.toml
crates/goblins-os-design/src/: lib.rs
crates/goblins-os-file-builder/: Cargo.toml
crates/goblins-os-file-builder/src/: main.rs
crates/goblins-os-installer/: Cargo.toml
crates/goblins-os-installer/src/: main.rs
crates/goblins-os-launcher/: Cargo.toml
crates/goblins-os-login/: Cargo.toml
crates/goblins-os-login/src/: main.rs
crates/goblins-os-markup/: Cargo.toml
crates/goblins-os-open/: Cargo.toml
crates/goblins-os-resident/: Cargo.toml
crates/goblins-os-screenshot-context/: Cargo.toml
crates/goblins-os-screenshot-context/src/: main.rs
crates/goblins-os-session-bridge/: Cargo.toml
crates/goblins-os-session-bridge/src/: main.rs
crates/goblins-os-session-tools/: Cargo.toml
crates/goblins-os-session-tools/src/: lib.rs
crates/goblins-os-settings/: Cargo.toml
crates/goblins-os-shell/: Cargo.toml
crates/goblins-os-shell/src/: main.rs
crates/goblins-os-textshortcuts-engine/: Cargo.toml
crates/goblins-os-textshortcuts-engine/src/: lib.rs  main.rs
crates/goblins-os-today/: Cargo.toml
crates/goblins-os-today/src/: main.rs
crates/goblins-os-ui/: Cargo.toml
crates/goblins-os-ui/src/: lib.rs
crates/goblins-os-verify/: Cargo.toml
crates/goblins-os-visual-lookup/: Cargo.toml
crates/goblins-os-visual-lookup/src/: main.rs
os/: signoff-notes.md
os/accountsservice/: goblin
os/applications/: mimeapps.list  org.goblins.OS.FullInstaller.desktop  org.goblins.OS.Games.Bottles.desktop  org.goblins.OS.Games.Heroic.desktop  org.goblins.OS.Games.Lutris.desktop  org.goblins.OS.Installer.desktop  org.goblins.OS.Login.desktop  org.goblins.OS.OpenAI.Agents.desktop  org.goblins.OS.OpenAI.ChatGPT.desktop  org.goblins.OS.OpenAI.Codex.desktop  org.goblins.OS.OpenAI.Images.desktop  org.goblins.OS.OpenAI.Platform.desktop  org.goblins.OS.OpenAI.Responses.desktop  org.goblins.OS.OpenAI.VoiceRealtime.desktop  org.goblins.OS.Policy.desktop  org.goblins.OS.Recovery.desktop  org.goblins.OS.Settings.desktop  org.goblins.OS.Shell.desktop  org.goblins.OS.Today.desktop  org.goblins.OS.VisualLookup.desktop
os/autostart/: org.goblins.OS.Installer.desktop  org.goblins.OS.Login.desktop
os/bootc/: 60-goblins-os-firewall.rules  Containerfile  gate.Dockerfile  generate-preview-proof-fixtures.py  goblins-os-firewall  render-desktop.sh  render-desktop.suffix.Dockerfile  render-screens.sh  render.suffix.Dockerfile  run-selftest.sh  selftest.suffix.Dockerfile  verify.suffix.Dockerfile
os/codex/: config.toml
os/focus/: goblins-os-focus-tick
os/gdm/: custom.conf
os/glib-schemas/: org.goblins.SoundRecognition.gschema.xml  org.goblins.os.a11y.switch-control.gschema.xml  org.goblins.os.focus.gschema.xml  org.goblins.os.today.gschema.xml  org.goblins.shell.extensions.captions.gschema.xml  org.goblins.shell.extensions.wm.gschema.xml
os/gnome-session/: goblins-os.session
os/gnome-shell-modes/: goblins-os.json
os/goblins-os-textshortcuts/: goblins-textshortcuts-ibus  goblins-textshortcuts.xml
os/gtk-4.0/: gtk-dark.css  gtk.css
os/hardware-gate/: close-signoff.sh  compose-signoff-rows.sh  release-evidence.sh  rpm-sbom-arch.sh  run-external-gate.sh  runbook.md  secret-scan.sh  verify-shipping-status.sh
os/input/: goblins-os-input-source-seed
os/iso/: branding-tool.Containerfile  build-iso.sh  config.toml  manifest-provenance.sh  remaster-anaconda-branding.sh  verify-config.toml  verify-install-dark.ks  verify-install.ks
os/release/: acquisition-readiness-delta.toml  architectures.toml  asset-provenance.toml  hydrate-release-artifacts.sh  installer-branding-tool.toml  release-readiness-delta.toml  source-tree-manifest.toml  third-party-notices.toml  trademark-posture.toml
os/runtime-gate/: build-an-app-live-model.sh
os/session/: goblins-os-session  goblins-os.desktop
os/sound-recognition/: goblins-os-sound-listener
os/systemd/: goblins-os-core.service  goblins-os-model-cache.service  goblins-os-resident.service
os/systemd-system/: goblins-os-firewall@.service
os/systemd-user/: org.goblins.OS.FocusTick.service  org.goblins.OS.FocusTick.timer  org.goblins.OS.IBus.service  org.goblins.OS.InputSourcesSeed.service  org.goblins.OS.SessionBridge.service  org.goblins.OS.Shell.service  org.goblins.OS.Shell.target  org.goblins.OS.SoundRecognition.service
os/tmpfiles/: goblins-os-codex.conf  goblins-os-core.conf  goblins-os-session.conf
os/voice/: goblins-os-dictate  goblins-os-voice-control
(+91 files in other folders)
