[workspace]
members = [
  "crates/goblins-os-ai",
  "crates/goblins-os-color-picker",
  "crates/goblins-os-control-center",
  "crates/goblins-os-core",
  "crates/goblins-os-design",
  "crates/goblins-os-file-builder",
  "crates/goblins-os-installer",
  "crates/goblins-os-launcher",
  "crates/goblins-os-login",
  "crates/goblins-os-markup",
  "crates/goblins-os-open",
  "crates/goblins-os-resident",
  "crates/goblins-os-screenshot-context",
  "crates/goblins-os-session-bridge",
  "crates/goblins-os-settings",
  "crates/goblins-os-shell",
  "crates/goblins-os-textshortcuts-engine",
  "crates/goblins-os-today",
  "crates/goblins-os-ui",
  "crates/goblins-os-verify",
  "crates/goblins-os-visual-lookup",
]
resolver = "2"

[workspace.package]
edition = "2021"
# Goblins OS's own source is AGPL-3.0-or-later (see LICENSE). Bundled OS
# components (Fedora base, GNOME, kernel, …) keep their own upstream licenses;
# the "Goblins OS" name and marks are reserved trademarks (see TRADEMARKS).
license = "AGPL-3.0-or-later"
publish = false
rust-version = "1.83"
