[package]
name = "goblins-os-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
axum = "0.8"
base64 = "0.22"
goblins-os-ai = { path = "../goblins-os-ai" }
percent-encoding = "2.3"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sysinfo = "0.33"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ureq = { version = "2.12", default-features = false, features = ["json", "tls"] }
writeable = { version = "0.6.3", features = ["alloc"] }
