[package]
name = "goblins-os-login"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[features]
default = []
native-desktop = ["dep:gtk4", "goblins-os-ui/native-desktop"]

[dependencies]
goblins-os-design = { path = "../goblins-os-design" }
goblins-os-ui = { path = "../goblins-os-ui" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "linux")'.dependencies]
gtk4 = { version = "0.9", optional = true }
