[package]
name = "goblins-os-session-bridge"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
base64 = "0.22"
goblins-os-textshortcuts-engine = { path = "../goblins-os-textshortcuts-engine" }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
