[package]
name = "goblins-os-session-tools"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
goblins-os-core-client = { path = "../goblins-os-core-client" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
