[package]
name = "goblins-os-shell"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[features]
default = []
native-desktop = ["dep:gtk4", "dep:pulldown-cmark", "goblins-os-ui/native-desktop"]

[dependencies]
goblins-os-design = { path = "../goblins-os-design" }
goblins-os-ui = { path = "../goblins-os-ui" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Renders the model's Markdown plan to Pango markup for the app-detail surface so
# literal ** / ## never reach pixels. Parser only — no HTML output needed.
pulldown-cmark = { version = "0.12", optional = true, default-features = false }

[target.'cfg(target_os = "linux")'.dependencies]
gtk4 = { version = "0.9", optional = true }
