[package]
name = "goblins-os-textshortcuts-engine"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "goblins-textshortcuts-engine"
path = "src/main.rs"
