[package]
name = "goblins-os-ui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[features]
default = []
native-desktop = ["dep:gtk4"]

[dependencies]
goblins-os-design = { path = "../goblins-os-design" }

[target.'cfg(target_os = "linux")'.dependencies]
gtk4 = { version = "0.9", optional = true }
